--- a/potterystore/templates/potterystore/store.html
+++ b/potterystore/templates/potterystore/store.html
@@ -4,7 +4,7 @@
 <div class="row">
     {% for product in products %}
     <div class="col-lg-4">
-    <img class="thumbnail" src="{{product.imageURL}} alt="Image of {{product.name}}"">
+    <img class="thumbnail" src="{{product.imageURL}}" alt="Image of {{product.name}}">
       <div class="box-element product">
           <h6><strong>{{product.name}}</strong></h6>
           <hr>
@@ -16,6 +16,3 @@
    </div>
     {% endfor %}
 </div>
-
-    {% endblock content %}
-    
